--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -97,6 +97,11 @@ This section provides details for each class and property defined by The System 
             <a href="#isAccountableFor" title="https://w3id.org/sao#isAccountableFor">is accountable for</a>
             <sup class="type-op" title="object property">op</sup>
          </dd>
+         <dt>is in range of</dt>
+         <dd>
+            <a href="#hasAccountableAgent" title="https://w3id.org/sao#hasAccountableAgent">has accountable agent</a>
+            <sup class="type-op" title="object property">op</sup>
+         </dd>
       </dl>
    </div>
    <div class="entity" id="AccountableObject">
@@ -270,6 +275,16 @@ This section provides details for each class and property defined by The System 
       </div>
       <div class="description">
          <dl>
+            <dt>has domain</dt>
+            <dd>
+               <span class="dotted" title="https://w3id.org/ep-plan#Entity">entity</span>
+               <sup class="type-c" title="class">c</sup>
+            </dd>
+            <dt>has range</dt>
+            <dd>
+               <a href="#AccountableAgent" title="https://w3id.org/sao#AccountableAgent">Accountable Agent</a>
+               <sup class="type-c" title="class">c</sup>
+            </dd>
             <dt>is inverse of</dt>
             <dd>
                <a href="#isAccountableFor" title="https://w3id.org/sao#isAccountableFor">is accountable for</a>
