--- a/index-en.html
+++ b/index-en.html
@@ -6,7 +6,7 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://w3id.org/sao","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://w3id.org/sao","name":"The System Accountability Ontology", "headline":"Document describing the ontology https://w3id.org/sao", "datePublished":"Mon Dec 14 21:01:42 GMT 2020", "version":"1.0. December 2020", "license":"https://creativecommons.org/licenses/by-nc-sa/4.0/", "author":[{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/iman.naja","url":"https://www.abdn.ac.uk/ncs/profiles/iman.naja"},{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/milan.markovic/","url":"https://www.abdn.ac.uk/ncs/profiles/milan.markovic/"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://w3id.org/sao","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://w3id.org/sao","name":"The System Accountability Ontology", "headline":"Document describing the ontology https://w3id.org/sao", "datePublished":"Tue Dec 15 12:26:01 GMT 2020", "version":"1.0. December 2020", "license":"https://creativecommons.org/licenses/by-nc-sa/4.0/", "author":[{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/iman.naja","url":"https://www.abdn.ac.uk/ncs/profiles/iman.naja"},{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/p.edwards","url":"https://www.abdn.ac.uk/ncs/profiles/p.edwards"},{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/milan.markovic/","url":"https://www.abdn.ac.uk/ncs/profiles/milan.markovic/"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -64,12 +64,12 @@ function loadTOC(){
 <dt>Revision:</dt>
 <dd>1.0. December 2020</dd>
 <dt>Authors:</dt>
-<dd><a href="https://www.abdn.ac.uk/ncs/profiles/iman.naja">https://www.abdn.ac.uk/ncs/profiles/iman.naja</a></dd><dd><a href="https://www.abdn.ac.uk/ncs/profiles/milan.markovic/">https://www.abdn.ac.uk/ncs/profiles/milan.markovic/</a></dd>
+<dd><a href="https://www.abdn.ac.uk/ncs/profiles/iman.naja">https://www.abdn.ac.uk/ncs/profiles/iman.naja</a></dd><dd><a href="https://www.abdn.ac.uk/ncs/profiles/p.edwards">https://www.abdn.ac.uk/ncs/profiles/p.edwards</a></dd><dd><a href="https://www.abdn.ac.uk/ncs/profiles/milan.markovic/">https://www.abdn.ac.uk/ncs/profiles/milan.markovic/</a></dd>
 
 <dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="https://img.shields.io/badge/License-https://creativecommons.org/licenses/by_nc_sa/4.0/-blue.svg" alt="https://creativecommons.org/licenses/by-nc-sa/4.0/" /></a>
 </dd><dt>Visualization:</dt><dd><a href="webvowl/index.html#" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <dt>Cite as:</dt>
-<dd>https://www.abdn.ac.uk/ncs/profiles/iman.naja,https://www.abdn.ac.uk/ncs/profiles/milan.markovic/. The System Accountability Ontology.Revision: 1.0. December 2020.</dd>
+<dd>https://www.abdn.ac.uk/ncs/profiles/iman.naja,https://www.abdn.ac.uk/ncs/profiles/p.edwards,https://www.abdn.ac.uk/ncs/profiles/milan.markovic/. The System Accountability Ontology.Revision: 1.0. December 2020.</dd>
 </dl>
 
 <hr/>
