--- a/index-en.html
+++ b/index-en.html
@@ -6,7 +6,13 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://w3id.org/sao","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://w3id.org/sao","name":"The System Accountability Ontology", "headline":"Document describing the ontology https://w3id.org/sao", "datePublished":"Tue Dec 15 12:26:01 GMT 2020", "version":"1.0. December 2020", "license":"https://creativecommons.org/licenses/by-nc-sa/4.0/", "author":[{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/iman.naja","url":"https://www.abdn.ac.uk/ncs/profiles/iman.naja"},{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/p.edwards","url":"https://www.abdn.ac.uk/ncs/profiles/p.edwards"},{"@type":"Person","name":"https://www.abdn.ac.uk/ncs/profiles/milan.markovic/","url":"https://www.abdn.ac.uk/ncs/profiles/milan.markovic/"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://w3id.org/sao","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://w3id.org/sao","name":"The System Accountability Ontology", "headline":"Document describing the ontology https://w3id.org/sao", "datePublished":"Tue Dec 15 12:26:01 GMT 2020", "version":"1.0. December 2020", "license":"https://creativecommons.org/licenses/by-nc-sa/4.0/", 
+"author":[
+{"@type":"Person","name":"Milan Markovic","url":"https://www.abdn.ac.uk/ncs/profiles/milan.markovic/"},
+{"@type":"Person","name":"Iman Naja","url":"https://www.abdn.ac.uk/ncs/profiles/iman.naja"},
+{"@type":"Person","name":"Peter Edwards","url":"https://www.abdn.ac.uk/ncs/profiles/p.edwards"},
+]}
+</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
